--- a/index.html
+++ b/index.html
@@ -24,9 +24,15 @@
 </head>
 
 <body>
+
+  <div class="bg"></div>
+  <div class="bg bg2"></div>
+  <div class="bg bg3"></div>
   <header>
     <nav class="navbar" style="display: flex; justify-content: end; ">
-      <a href="index.html"><h1> Portfolio</h1></a>
+      <a href="index.html">
+        <h1> Portfolio</h1>
+      </a>
       <ul>
 
         <li><a href="#work"> Contributions</a></li>
@@ -66,120 +72,151 @@
 
     </div>
   </div>
-
   <div>
-    <section class="about" id="about">
-      <!-- About me heading is not looking good here -->
-      <!-- <div class="subhead">
-        <h2>About me</h2>
-      </div> -->
-      <div class="content">
-        <div class="contentbox w50">
-          <h3>Hello there, I am</h3>
-          <h1>Karl Vegan</h1>
-          <div class="about_self">
-            <h3>I'm a Developer.</h3>
-            <p>
-              🌀Self-taught Web Dev ⚡ Pursuing degree in Computer Science 📸
-              Photographer.<br />
-              I love programming and making random web-based applications for
-              fun. I am a future full-stack developer, currently I'm focusing
-              on the backend.
-            </p>
+    <section>
+      <section class="about" id="about">
+        <div class="about_content container-fluid">
+          <div class="row">
+            <div class="col-lg-6">
+              <div class="contentbox w50 ">
+                <h3>Hello there, I am</h3>
+                <h1> Karl Vegan</h1>
+                <div class="about_self">
+                  <h3>I'm a <u>Developer.</u></h3>
+                  <p>
+                    🌀Self-taught Web Dev ⚡ Pursuing degree in Computer Science 📸
+                    Photographer.<br />
+                    I love programming and making random web-based applications for
+                    fun. I am a future full-stack developer, currently I'm focusing
+                    on the backend.
+                  </p>
+                </div>
+                <div class="about_hobby">
+                  <h3>My Interests apart from coding</h3>
+                  <p>
+                    📖 reading books<br />
+                    📸 photography<br />
+                    🎨 sketching/painting!<br />
+                  </p>
+                </div>
+                <button class="custom-btn btn-3"><span>Let's connect</span></button>
+              </div>
+            </div>
+
+      </section>
+
+      <div class="project" id="project">
+        <h3 class="subhead">Projects🎥 </h3>
+
+        <div class="grid-container">
+          <div class="grid-item" id="box-1">
+            <a href="https://github.com/fykaa/Sample-Portfolio-for-Learners/tree/master/projects/static%20card"
+              target="_blank">
+              <div class="image-wrapper"><img src="/assets/main home page/Static card.png" alt="Static card" /></div>
+              <div class="box">Static card <div class="box-content">Sorry the project detail was not available in any of
+                  the folder in inside the readme file. However, the project details goes here. </div>
+              </div>
+            </a>
           </div>
-          <div class="about_hobby">
-            <h3>My Interests apart from coding</h3>
-            <p>
-              📖 reading books<br />
-              📸 photography<br />
-              🎨 sketching/painting!<br />
-            </p>
+          <div class="grid-item" id="box-2">
+            <a href="https://github.com/fykaa/Sample-Portfolio-for-Learners/tree/master/projects/Aryan" target="_blank">
+              <div class="image-wrapper"><img src="/assets/main home page/Aryan.png" alt="Aryan" /></div>
+              <div class="box"> Aryan <div class="box-content">Sorry the project detail was not available in any of the
+                  folder in inside the readme file. However, the project details goes here. </div>
+              </div>
+            </a>
           </div>
-          <button class="custom-btn btn-3"><span>Let's connect</span></button>
-        </div>
-        <div aling="right" class="w50 about_img">
-          <img src="./assets/girl.jpg" class="img-responsive imgIM" />
+          <div class="grid-item" id="box-3">
+            <a href="https://github.com/fykaa/Sample-Portfolio-for-Learners/tree/master/projects/Bank-project"
+              target="_blank">
+              <div class="image-wrapper"><img src="/assets/main home page/Bank-project.png" alt="Bank-project" /></div>
+              <div class="box">Bank-project <div class="box-content">Sorry the project detail was not available in any
+                  of the folder in inside the readme file. However, the project details goes here. </div>
+              </div>
+            </a>
+          </div>
+
+          <div class="grid-item" id="box-4">
+            <a href="https://github.com/fykaa/Sample-Portfolio-for-Learners/tree/master/projects/Business-Card-main"
+              target="_blank">
+              <div class="image-wrapper"><img src="/assets/main home page/Business-card-main.png"
+                  alt="Business-Card-main" /></div>
+              <div class="box">Business-Card-main <div class="box-content">Sorry the project detail was not available in
+                  any of the folder in inside the readme file. However, the project details goes here. </div>
+              </div>
+            </a>
+          </div>
+          <div class="grid-item" id="box-5">
+            <a href="https://github.com/fykaa/Sample-Portfolio-for-Learners/tree/master/projects/Suryansh%20Card"
+              target="_blank">
+              <div class="image-wrapper"><img src="/assets/main home page/Suryansh Card.png" alt="Suryansh Card" />
+              </div>
+              <div class="box">Suryansh Card <div class="box-content">Sorry the project detail was not available in any
+                  of the folder in inside the readme file. However, the project details goes here. </div>
+              </div>
+            </a>
+          </div>
+          <div class="grid-item" id="box-6">
+            <a href="https://github.com/fykaa/Sample-Portfolio-for-Learners/tree/master/projects/animesite"
+              target="_blank">
+              <div class="image-wrapper"><img src="/assets/main home page/animesite.png" alt="animesite" /></div>
+              <div class="box">animesite <div class="box-content">Sorry the project detail was not available in any of
+                  the folder in inside the readme file. However, the project details goes here. </div>
+              </div>
+            </a>
+          </div>
+          <div class="grid-item" id="box-7">
+            <a href="https://github.com/fykaa/Sample-Portfolio-for-Learners/tree/master/projects/portfolio"
+              target="_blank">
+              <div class="image-wrapper"><img src="/assets/main home page/portfolio.png" alt="portfolio" /></div>
+              <div class="box">portfolio <div class="box-content">Sorry the project detail was not available in any of
+                  the folder in inside the readme file. However, the project details goes here. </div>
+              </div>
+            </a>
+          </div>
+          <div class="grid-item" id="box-8">
+            <a href="https://github.com/fykaa/Sample-Portfolio-for-Learners/tree/master/projects/spotify-clone"
+              target="_blank">
+              <div class="image-wrapper"><img src="/assets/main home page/spotify-clone.png" alt="spotify-clone" />
+              </div>
+              <div class="box">spotify-clone <div class="box-content">Sorry the project detail was not available in any
+                  of the folder in inside the readme file. However, the project details goes here. </div>
+              </div>
+            </a>
+          </div>
+          <div class="grid-item" id="box-9">
+            <a href="https://github.com/fykaa/Sample-Portfolio-for-Learners/tree/master/projects/Amit" target="_blank">
+              <div class="image-wrapper">
+                <img src="/assets/main home page/Amit.png" alt="Amit" />
+              </div>
+              <div class="box"> Amit <div class="box-content">Sorry the project detail was not available in any of the
+                  folder in inside the readme file. However, the project details goes here. </div>
+              </div>
+            </a>
+          </div>
+          <div class="grid-item" id="box-10">
+            <a href="https://github.com/fykaa/Sample-Portfolio-for-Learners/tree/master/projects/Tribute-Page"
+              target="_blank">
+              <div class="image-wrapper"><img src="/assets/main home page/Gandalf.jpg" alt="Static card" /></div>
+              <div class="box">Tribute Page <div class="box-content">Sorry the project detail was not available in any
+                  of the folder in inside the readme file. However, the project details goes here. </div>
+              </div>
+            </a>
+          </div>
+          <div class="grid-item" id="box-11">
+            <a href="https://github.com/fykaa/Sample-Portfolio-for-Learners/tree/master/projects/vigenere%20cypher"
+              target="_blank">
+              <div class="image-wrapper"><img src="/assets/main home page/Vigenere Cipher.png" alt="vigenere cypher" />
+              </div>
+              <div class="box">vigenere cypher <div class="box-content">Sorry the project detail was not available in
+                  any of the folder in inside the readme file. However, the project details goes here. </div>
+              </div>
+            </a>
+          </div>
         </div>
       </div>
-    </section>
-
-    <div class="project" id="project">
-      <h3 class="subhead">Projects🎥 </h3>
-
-      <div class="grid-container">
-        <div class="grid-item" id="box-1">
-          <a href="https://github.com/fykaa/Sample-Portfolio-for-Learners/tree/master/projects/static%20card" target="_blank">
-            <div class="image-wrapper"><img src="/assets/main home page/Static card.png" alt="Static card"/></div>
-            <div class="box">Static card <div class="box-content">Sorry the project detail was not available in any of the folder in inside the readme file. However, the project details goes here. </div></div>
-          </a>
-        </div>
-        <div class="grid-item" id="box-2">
-          <a href="https://github.com/fykaa/Sample-Portfolio-for-Learners/tree/master/projects/Aryan" target="_blank">
-            <div class="image-wrapper"><img src="/assets/main home page/Aryan.png" alt="Aryan"/></div>
-            <div class="box"> Aryan <div class="box-content">Sorry the project detail was not available in any of the folder in inside the readme file. However, the project details goes here. </div> </div>
-          </a>
-        </div>
-        <div class="grid-item" id="box-3">
-          <a href="https://github.com/fykaa/Sample-Portfolio-for-Learners/tree/master/projects/Bank-project" target="_blank">
-            <div class="image-wrapper"><img src="/assets/main home page/Bank-project.png" alt="Bank-project"/></div>
-            <div class="box">Bank-project <div class="box-content">Sorry the project detail was not available in any of the folder in inside the readme file. However, the project details goes here. </div></div>
-          </a>
-        </div>
-        
-        <div class="grid-item" id="box-4">
-          <a href="https://github.com/fykaa/Sample-Portfolio-for-Learners/tree/master/projects/Business-Card-main" target="_blank">
-            <div class="image-wrapper"><img src="/assets/main home page/Business-card-main.png" alt="Business-Card-main"/></div>
-            <div class="box">Business-Card-main <div class="box-content">Sorry the project detail was not available in any of the folder in inside the readme file. However, the project details goes here. </div></div>
-          </a>
-        </div>
-        <div class="grid-item" id="box-5">
-          <a href="https://github.com/fykaa/Sample-Portfolio-for-Learners/tree/master/projects/Suryansh%20Card" target="_blank">
-            <div class="image-wrapper"><img src="/assets/main home page/Suryansh Card.png" alt="Suryansh Card"/></div>
-            <div class="box">Suryansh Card <div class="box-content">Sorry the project detail was not available in any of the folder in inside the readme file. However, the project details goes here. </div></div>
-          </a>
-        </div>
-        <div class="grid-item" id="box-6">
-          <a href="https://github.com/fykaa/Sample-Portfolio-for-Learners/tree/master/projects/animesite" target="_blank">
-            <div class="image-wrapper"><img src="/assets/main home page/animesite.png" alt="animesite"/></div>
-            <div class="box">animesite <div class="box-content">Sorry the project detail was not available in any of the folder in inside the readme file. However, the project details goes here. </div></div>
-          </a>
-        </div>
-        <div class="grid-item" id="box-7">
-          <a href="https://github.com/fykaa/Sample-Portfolio-for-Learners/tree/master/projects/portfolio" target="_blank">
-            <div class="image-wrapper"><img src="/assets/main home page/portfolio.png" alt="portfolio"/></div>
-            <div class="box">portfolio <div class="box-content">Sorry the project detail was not available in any of the folder in inside the readme file. However, the project details goes here. </div></div>
-          </a>
-        </div>
-        <div class="grid-item" id="box-8">
-          <a href="https://github.com/fykaa/Sample-Portfolio-for-Learners/tree/master/projects/spotify-clone" target="_blank">
-            <div class="image-wrapper"><img src="/assets/main home page/spotify-clone.png" alt="spotify-clone"/></div>
-            <div class="box">spotify-clone <div class="box-content">Sorry the project detail was not available in any of the folder in inside the readme file. However, the project details goes here. </div></div>
-          </a>
-        </div>
-        <div class="grid-item" id="box-9">
-          <a href="https://github.com/fykaa/Sample-Portfolio-for-Learners/tree/master/projects/Amit" target="_blank">
-            <div class="image-wrapper">
-              <img src="/assets/main home page/Amit.png" alt="Amit"/>
-            </div>
-            <div class="box"> Amit <div class="box-content">Sorry the project detail was not available in any of the folder in inside the readme file. However, the project details goes here. </div></div> </a>
-        </div>
-        <div class="grid-item" id="box-10">
-          <a href="https://github.com/fykaa/Sample-Portfolio-for-Learners/tree/master/projects/Tribute-Page" target="_blank">
-            <div class="image-wrapper"><img src="/assets/main home page/Gandalf.jpg" alt="Static card"/></div>
-            <div class="box">Tribute Page <div class="box-content">Sorry the project detail was not available in any of the folder in inside the readme file. However, the project details goes here. </div>
-            </div>
-          </a>
-        </div>
-        <div class="grid-item" id="box-11">
-          <a href="https://github.com/fykaa/Sample-Portfolio-for-Learners/tree/master/projects/vigenere%20cypher" target="_blank">
-            <div class="image-wrapper"><img src="/assets/main home page/Vigenere Cipher.png" alt="vigenere cypher"/></div>
-            <div class="box">vigenere cypher <div class="box-content">Sorry the project detail was not available in any of the folder in inside the readme file. However, the project details goes here. </div></div>
-          </a>
-        </div>
-      </div>
-    </div>
   </div>
-  
+
 
   <!-- FLEXBOX -->
   <div class="flexbox" id="contact">
@@ -220,7 +257,7 @@
       <a href="https://www.linkedin.com/in/faeka/" target="_blank">
         Open Source ♥ </a>
       | 2022 All rights reserved
-<div class="footer-wrapper">
+      <div class="footer-wrapper">
         <div class="icons">
           <ul>
             <li>
@@ -246,10 +283,10 @@
           </ul>
         </div>
 
-    </div>
-    <span class="floating-footer">
-      Copyright &copy; reserved w Fyka Ansari &nbsp;
-    </span>
+      </div>
+      <span class="floating-footer">
+        Copyright &copy; reserved w Fyka Ansari &nbsp;
+      </span>
   </footer>
   <script src="./javascript.js"></script>
 </body>
