--- a/index.html
+++ b/index.html
@@ -112,26 +112,26 @@
           <div class="grid-item" id="box-1">
             <a href="https://github.com/fykaa/Sample-Portfolio-for-Learners/tree/master/projects/static%20card"
               target="_blank">
-              <div class="image-wrapper"><img src="/assets/main home page/Static card.png" alt="Static card" /></div>
-              <div class="box">Static card <div class="box-content">Sorry the project detail was not available in any of
-                  the folder in inside the readme file. However, the project details goes here. </div>
+              <div class="image-wrapper"><img src="assets/main home page/Static card.png" alt="Static card" /></div>
+              <div class="box"><h1>Static card</h1> <div class="box-content"> <p> Sorry the project detail was not available in any of
+                  the folder in inside the readme file. However, the project details goes here. </p></div>
               </div>
             </a>
           </div>
           <div class="grid-item" id="box-2">
             <a href="https://github.com/fykaa/Sample-Portfolio-for-Learners/tree/master/projects/Aryan" target="_blank">
-              <div class="image-wrapper"><img src="/assets/main home page/Aryan.png" alt="Aryan" /></div>
-              <div class="box"> Aryan <div class="box-content">Sorry the project detail was not available in any of the
-                  folder in inside the readme file. However, the project details goes here. </div>
+              <div class="image-wrapper"><img src="assets/main home page/Aryan.png" alt="Aryan" /></div>
+              <div class="box"><h1>Aryan</h1>  <div class="box-content"> <p> Sorry the project detail was not available in any of the
+                  folder in inside the readme file. However, the project details goes here. </p></div>
               </div>
             </a>
           </div>
           <div class="grid-item" id="box-3">
             <a href="https://github.com/fykaa/Sample-Portfolio-for-Learners/tree/master/projects/Bank-project"
               target="_blank">
-              <div class="image-wrapper"><img src="/assets/main home page/Bank-project.png" alt="Bank-project" /></div>
-              <div class="box">Bank-project <div class="box-content">Sorry the project detail was not available in any
-                  of the folder in inside the readme file. However, the project details goes here. </div>
+              <div class="image-wrapper"><img src="assets/main home page/Bank-project.png" alt="Bank-project" /></div>
+              <div class="box"> <h1>Bank-project</h1>  <div class="box-content"> <p> Sorry the project detail was not available in any
+                  of the folder in inside the readme file. However, the project details goes here. </p></div>
               </div>
             </a>
           </div>
@@ -139,77 +139,77 @@
           <div class="grid-item" id="box-4">
             <a href="https://github.com/fykaa/Sample-Portfolio-for-Learners/tree/master/projects/Business-Card-main"
               target="_blank">
-              <div class="image-wrapper"><img src="/assets/main home page/Business-card-main.png"
+              <div class="image-wrapper"><img src="assets/main home page/Business-card-main.png"
                   alt="Business-Card-main" /></div>
-              <div class="box">Business-Card-main <div class="box-content">Sorry the project detail was not available in
-                  any of the folder in inside the readme file. However, the project details goes here. </div>
+              <div class="box"> <h1>Business-Card-main </h1><div class="box-content"> <p> Sorry the project detail was not available in
+                  any of the folder in inside the readme file. However, the project details goes here.</p> </div>
               </div>
             </a>
           </div>
           <div class="grid-item" id="box-5">
             <a href="https://github.com/fykaa/Sample-Portfolio-for-Learners/tree/master/projects/Suryansh%20Card"
               target="_blank">
-              <div class="image-wrapper"><img src="/assets/main home page/Suryansh Card.png" alt="Suryansh Card" />
+              <div class="image-wrapper"><img src="assets/main home page/Suryansh Card.png" alt="Suryansh Card" />
               </div>
-              <div class="box">Suryansh Card <div class="box-content">Sorry the project detail was not available in any
-                  of the folder in inside the readme file. However, the project details goes here. </div>
+              <div class="box"> <h1>Suryansh Card</h1> <div class="box-content"> <p> Sorry the project detail was not available in any
+                  of the folder in inside the readme file. However, the project details goes here. </p></div>
               </div>
             </a>
           </div>
           <div class="grid-item" id="box-6">
             <a href="https://github.com/fykaa/Sample-Portfolio-for-Learners/tree/master/projects/animesite"
               target="_blank">
-              <div class="image-wrapper"><img src="/assets/main home page/animesite.png" alt="animesite" /></div>
-              <div class="box">animesite <div class="box-content">Sorry the project detail was not available in any of
-                  the folder in inside the readme file. However, the project details goes here. </div>
+              <div class="image-wrapper"><img src="assets/main home page/animesite.png" alt="animesite" /></div>
+              <div class="box"><h1> animesite</h1> <div class="box-content"> <p> Sorry the project detail was not available in any of
+                  the folder in inside the readme file. However, the project details goes here. </p></div>
               </div>
             </a>
           </div>
           <div class="grid-item" id="box-7">
             <a href="https://github.com/fykaa/Sample-Portfolio-for-Learners/tree/master/projects/portfolio"
               target="_blank">
-              <div class="image-wrapper"><img src="/assets/main home page/portfolio.png" alt="portfolio" /></div>
-              <div class="box">portfolio <div class="box-content">Sorry the project detail was not available in any of
-                  the folder in inside the readme file. However, the project details goes here. </div>
+              <div class="image-wrapper"><img src="assets/main home page/portfolio.png" alt="portfolio" /></div>
+              <div class="box"> <h1>portfolio</h1> <div class="box-content"> <p>Sorry the project detail was not available in any of
+                  the folder in inside the readme file. However, the project details goes here. </p> </div>
               </div>
             </a>
           </div>
           <div class="grid-item" id="box-8">
             <a href="https://github.com/fykaa/Sample-Portfolio-for-Learners/tree/master/projects/spotify-clone"
               target="_blank">
-              <div class="image-wrapper"><img src="/assets/main home page/spotify-clone.png" alt="spotify-clone" />
+              <div class="image-wrapper"><img src="assets/main home page/spotify-clone.png" alt="spotify-clone" />
               </div>
-              <div class="box">spotify-clone <div class="box-content">Sorry the project detail was not available in any
-                  of the folder in inside the readme file. However, the project details goes here. </div>
+              <div class="box"> <h1>spotify-clone</h1> <div class="box-content"> <p> Sorry the project detail was not available in any
+                  of the folder in inside the readme file. However, the project details goes here. </p></div>
               </div>
             </a>
           </div>
           <div class="grid-item" id="box-9">
             <a href="https://github.com/fykaa/Sample-Portfolio-for-Learners/tree/master/projects/Amit" target="_blank">
               <div class="image-wrapper">
-                <img src="/assets/main home page/Amit.png" alt="Amit" />
+                <img src="assets/main home page/Amit.png" alt="Amit" />
               </div>
-              <div class="box"> Amit <div class="box-content">Sorry the project detail was not available in any of the
-                  folder in inside the readme file. However, the project details goes here. </div>
+              <div class="box"><h1>Amit </h1> <div class="box-content">  <p> Sorry the project detail was not available in any of the
+                  folder in inside the readme file. However, the project details goes here.</p> </div>
               </div>
             </a>
           </div>
           <div class="grid-item" id="box-10">
             <a href="https://github.com/fykaa/Sample-Portfolio-for-Learners/tree/master/projects/Tribute-Page"
               target="_blank">
-              <div class="image-wrapper"><img src="/assets/main home page/Gandalf.jpg" alt="Static card" /></div>
-              <div class="box">Tribute Page <div class="box-content">Sorry the project detail was not available in any
-                  of the folder in inside the readme file. However, the project details goes here. </div>
+              <div class="image-wrapper"><img src="assets/main home page/Gandalf.jpg" alt="Static card" /></div>
+              <div class="box"> <h1>Tribute Page</h1> <div class="box-content"><p> Sorry the project detail was not available in any
+                  of the folder in inside the readme file. However, the project details goes here. </p></div>
               </div>
             </a>
           </div>
           <div class="grid-item" id="box-11">
             <a href="https://github.com/fykaa/Sample-Portfolio-for-Learners/tree/master/projects/vigenere%20cypher"
               target="_blank">
-              <div class="image-wrapper"><img src="/assets/main home page/Vigenere Cipher.png" alt="vigenere cypher" />
+              <div class="image-wrapper"><img src="assets/main home page/Vigenere Cipher.png" alt="vigenere cypher" />
               </div>
-              <div class="box">vigenere cypher <div class="box-content">Sorry the project detail was not available in
-                  any of the folder in inside the readme file. However, the project details goes here. </div>
+              <div class="box"> <h1>vigenere cypher</h1> <div class="box-content"> <p> Sorry the project detail was not available in
+                  any of the folder in inside the readme file. However, the project details goes here.</p> </div>
               </div>
             </a>
           </div>
